--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "vue-router": "^3.0.6"
+        "vue-router": "^3.0.6",
+        "vue-wysiwyg": "^1.7.2",
+        "vuejs-noty": "^0.1.3",
+        "vuex": "^3.1.1"
     }
 }
