--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "vue-i18n": "^8.11.2",
         "vue-router": "^3.0.6",
         "vue-wysiwyg": "^1.7.2",
         "vuejs-noty": "^0.1.3",
