Docker added for better development

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,9 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+
+# there must be docker DB containers name 
+DB_HOST=vue-laravel-noteapp-mariadb
 DB_PORT=3306
 DB_DATABASE=homestead
 DB_USERNAME=homestead
